$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-05-23 [O] Updated Italian language file (user contribution) {GauGau}
2009-05-21 [M] Updated version count from cpg1.4.23 to cpg1.4.24 in subversion repository as a preparation for a possible future release {GauGau}
2009-05-21 [M] Release of cpg1.4.23 {GauGau}
2009-05-20 [M] Added a warning message for admin if register_globals is on {Abbas}
2009-05-19 [S] Fixing http://www.milw0rm.com/exploits/8713 {Nibbler}
2009-05-18 [O] Updated Italian language file (user contribution) {GauGau}
2009-05-19 [B] Add PHP 5.3 support to debugger {Nibbler}
2009-05-01 [M] Updated version count from cpg1.4.22 to cpg1.4.23 in subversion repository as a preparation for a possible future release {GauGau}
2009-04-30 [M] Release of cpg1.4.22 {GauGau}
2009-04-29 [B] Fixed improper ban expirations due to time offset being incorrectly applied (thread ID 55464) {Paver}
2009-04-29 [S] Fixed XSS vulnerability in showdoc.php (thread ID 59237) {Nibbler}
2009-04-23 [B] Increased maxlength for password field in user manager from 8 to 25 to match the limits elsewhere {Nibbler}
2009-03-05 [M] Updated version count from cpg1.4.21 to cpg1.4.22 in subversion repository as a preparation for the next release {GauGau}
2009-03-04 [M] Release of cpg1.4.21 {GauGau}
2009-03-04 [M] Changed versioncheck repository URL from sf.net to coppermine-gallery.net {GauGau}
2009-03-03 [D] Added information to the bbcode section of the docs about the CSRF vulnerability {Paver}
2009-03-03 [S] Removed processing of bbcodes [img] and [url] due to CSRF vulnerability (thread ID 58309) {Paver}