@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-05-23 [O] Updated Finnish language file (user contribution) {GauGau}
 2009-05-23 [O] Updated Italian language file (user contribution) {GauGau}
 2009-05-21 [M] Updated version count from cpg1.4.23 to cpg1.4.24 in subversion repository as a preparation for a possible future release {GauGau}
 2009-05-21 [M] Release of cpg1.4.23 {GauGau}
